Humongous move to CoffeScript and fixed #15 Page 12: Explicit tree structure, showing relations between all nodes on project details

--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -58,6 +58,7 @@ block content
         // used on page render
         script(type='text/javascript', src='/javascripts/client/ajax-requests.js')
         script(type='text/javascript', src='/javascripts/authed_templates.js')
+        script(type='text/javascript', src='/javascripts/client/test.js')
 
         block au_content
 
