--- a/Sources/Plancrow/public/stylesheets/style.less
+++ b/Sources/Plancrow/public/stylesheets/style.less
@@ -12,6 +12,7 @@ body {
   margin: 0 auto;
   max-width: 1000px;
 }
+
 .container > hr {
   margin: 60px 0;
 }
@@ -21,14 +22,17 @@ body {
   margin: 80px 0;
   text-align: center;
 }
+
 .jumbotron h1 {
   font-size: 100px;
   line-height: 1;
 }
+
 .jumbotron .lead {
   font-size: 24px;
   line-height: 1.25;
 }
+
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
@@ -38,7 +42,57 @@ body {
 .marketing {
   margin: 60px 0;
 }
+
 .marketing p + h4 {
   margin-top: 28px;
 }
 
+.tree li.prj-node {
+  margin: 0px 0;
+  list-style-type: none;
+  position: relative;
+  padding: 20px 5px 0px 5px;
+}
+
+.tree li.prj-node::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  right: auto;
+  left: -20px;
+  border-left: 1px solid #ccc;
+  bottom: 50px;
+}
+
+.tree li.prj-node::after {
+  content: '';
+  position: absolute;
+  top: 30px;
+  width: 25px;
+  height: 20px;
+  right: auto;
+  left: -20px;
+  border-top: 1px solid #ccc;
+}
+
+.tree li.prj-node span.name {
+  display: inline-block;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+}
+
+/*Remove connectors before root*/
+.tree > ul > li.prj-node::before, .tree > ul > li.prj-node::after {
+  border: 0;
+}
+
+  /*Remove connectors after last child*/
+.tree li.prj-node:last-child::before {
+  height: 30px;
+}
