Fixes #25 Page 12: Time scale

--- a/Sources/Plancrow/views/layout.jade
+++ b/Sources/Plancrow/views/layout.jade
@@ -15,6 +15,8 @@ html
 
     link(rel='stylesheet', href='/javascripts/ext/select2-3.4.1/select2.css')
     script(type='text/javascript', src='/javascripts/ext/select2-3.4.1/select2.min.js')
+    link(rel='stylesheet', href='/stylesheets/ext/select2-bootstrap.css')
+
 
 
   body
