--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -23,7 +23,7 @@ block au_content
                         tt  (max: in progress)
                     li
                         a(href="/pages/03_registration_page") Page 3: Registration Page
-                        tt  (not started)
+                        tt  (max: in progress)
                     li
                         a(href="/pages/04_sign_in_page") Page 4: Sign In Page
                         tt  (not started)
