--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -26,10 +26,10 @@ block au_content
                         tt  (max: in progress)
                     li
                         a(href="/pages/04_sign_in_page") Page 4: Sign In Page
-                        tt  (not started)
+                        tt  (ilya: in progress)
                     li
                         a(href="/pages/05_company_admin") Page 5: Company Admin
-                        tt  (not started)
+                        tt  (max: in progress)
                     li
                         a(href="/pages/06_user_settings") Page 6: User Settings
                         tt  (not started)
