--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -32,7 +32,7 @@ block au_content
                         tt  (max: in progress)
                     li
                         a(href="/pages/06_user_settings") Page 6: User Settings
-                        tt  (not started)
+                        tt  (max: in progress)
                     li
                         a(href="/pages/07_user_list") Page 7: User List
                         tt  (not started)
