--- a/Sources/Plancrow/views/screens/06_user_settings.jade
+++ b/Sources/Plancrow/views/screens/06_user_settings.jade
@@ -2,5 +2,30 @@ extends ../authed_layout
 
 block au_content
     div.row-fluid
-        div.span12
-            h1 not started
+        div.span6.offset3
+            h3 Edit user details
+            form.form-horizontal
+                fieldset
+                    label Login: login
+                    div.control-group
+                        label.control-label(for='inputName') Name
+                        div.controls
+                            input#inputName(type='text', placeholder='')
+                    div.control-group
+                        label.control-label(for='inputSurname') Surname
+                        div.controls
+                            input#inputSurname(type='text', placeholder='')
+                    a(href="/dynamic") Change password
+                    table.table-bordered(width=400)
+                        caption Roles in companies
+                        thead
+                            tr
+                                th Company
+                                th Role
+                        tbody
+                            tr
+                                td C1
+                                td R1
+                    div.control-group
+                        div.controls
+                            button.btn.btn-primary(type='submit') Save changes
