--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -17,25 +17,25 @@ block au_content
                 ul
                     li
                         a(href="/pages/01_welcome_page") Page 1: Welcome Page
-                        tt  (max: in progress)
+                        tt  (max: template done)
                     li
                         a(href="/pages/02_pricing_page") Page 2: Pricing Page
-                        tt  (max: in progress)
+                        tt  (max: template done)
                     li
                         a(href="/pages/03_registration_page") Page 3: Registration Page
-                        tt  (max: in progress)
+                        tt  (max: template done)
                     li
                         a(href="/pages/04_sign_in_page") Page 4: Sign In Page
                         tt  (ilya: in progress)
                     li
                         a(href="/pages/05_company_admin") Page 5: Company Admin
-                        tt  (max: in progress)
+                        tt  (max: template done)
                     li
                         a(href="/pages/06_user_settings") Page 6: User Settings
-                        tt  (max: in progress)
+                        tt  (max: template done)
                     li
                         a(href="/pages/07_user_list") Page 7: User List
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/08_invitation") Page 8: Invitation
                         tt  (not started)
