--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -38,7 +38,7 @@ block au_content
                         tt  (max: template done)
                     li
                         a(href="/pages/08_invitation") Page 8: Invitation
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/09_project_list") Page 9: Project List
                         tt  (ilya: in progress)
