--- a/Sources/Plancrow/views/screens/08_invitation.jade
+++ b/Sources/Plancrow/views/screens/08_invitation.jade
@@ -2,5 +2,9 @@ extends ../anon_layout
 
 block au_content
     div.row-fluid
-        div.span12
-            h1 not started
+        div.span6.offset3
+            h3 You are invited to use plancrow by MANAGER of COMPANY
+            label You can
+            a(href="/pages/03_registration_page") Register
+            label or
+            a(href="/pages/04_sign_in_page") Use existing account
