--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -44,10 +44,10 @@ block au_content
                         tt  (ilya: in progress)
                     li
                         a(href="/pages/10_project_creation") Page 10: Project Creation
-                        tt  (max: in progress)
+                        tt  (max: template done)
                     li
                         a(href="/pages/11_project_settings") Page 11: Project Settings
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/12_project_details") Page 12: Project Details
                         tt  (ilya: in progress)
