--- a/Sources/Plancrow/views/screens/07_user_list.jade
+++ b/Sources/Plancrow/views/screens/07_user_list.jade
@@ -41,4 +41,4 @@ block au_content
                     input#inputEmail(type='email', placeholder='')
             div.control-group
                 div.controls
-                    button.btn.btn-primary(type='submit') Send invitation
+                    button.btn.btn-primary(type='submit') Send iniv
