Preliminary markup for customers list

--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -56,7 +56,7 @@ block au_content
                         tt  (not started)
                     li
                         a(href="/pages/14_edit_customer") Page 14: Edit Customer
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/15_invoicing_for_customer") Page 15: Invoicing For Customer
                         tt  (not started)
