--- a/Sources/Plancrow/views/screens/13_customers.jade
+++ b/Sources/Plancrow/views/screens/13_customers.jade
@@ -3,4 +3,11 @@ extends ../authed_layout
 block au_content
     div.row-fluid
         div.span12
-            h1 not started
+            h3 Company customers
+            table.table-bordered
+                tbody
+                    tr
+                        td Name
+                        td
+                            a(href="/pages/14_edit_customer") Edit
+
