--- a/Sources/Plancrow/views/screens/13_customers.jade
+++ b/Sources/Plancrow/views/screens/13_customers.jade
@@ -10,4 +10,4 @@ block au_content
                         td Name
                         td
                             a(href="/pages/14_edit_customer") Edit
-
+            a(href="/pages/14_edit_customer") Create
