--- a/Sources/Plancrow/views/screens/11_project_settings.jade
+++ b/Sources/Plancrow/views/screens/11_project_settings.jade
@@ -57,4 +57,4 @@ block au_content
                     label
                     div.control-group
                         div.controls
-                            button.btn(type='submit') Save changed
+                            button.btn(type='submit') Save changes
