--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -58,14 +58,14 @@ block au_content
                         a(href="/pages/14_edit_customer") Page 14: Edit Customer
                         tt  (max: template done)
                     li
-                        a(href="/pages/15_invoicing_for_customer") Page 15: Invoicing For Customer
+                        a(href="/pages/15_invoicing_for_project") Page 15: Invoicing For Customer
                         tt  (not started)
                     li
                         a(href="/pages/16_invoices_history") Page 16: Invoices History
                         tt  (not started)
                     li
                         a(href="/pages/17_invoice_saving") Page 17: Invoice Saving
-                        tt  (not started)
+                        tt  (max: not required)
                     li
                         a(href="/pages/18_reports_page") Page 18: Reports Page
                         tt  (not started)
