--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -59,10 +59,10 @@ block au_content
                         tt  (max: template done)
                     li
                         a(href="/pages/15_invoicing_for_project") Page 15: Invoicing For Customer
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/16_invoices_history") Page 16: Invoices History
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/17_invoice_saving") Page 17: Invoice Saving
                         tt  (max: not required)
