--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -68,7 +68,7 @@ block au_content
                         tt  (max: not required)
                     li
                         a(href="/pages/18_reports_page") Page 18: Reports Page
-                        tt  (not started)
+                        tt  (max: not required)
                     li
                         a(href="/pages/19_management_report_screen") Page 19: Management Report Screen
                         tt  (not started)
