--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -71,7 +71,7 @@ block au_content
                         tt  (max: template done)
                     li
                         a(href="/pages/19_management_report_screen") Page 19: Management Report Screen
-                        tt  (not started)
+                        tt  (max: template done)
                     li
                         a(href="/pages/20_project_chart") Page 20: Project Chart
                         tt  (not started)
