Adjusted select2 style to fit bootstrap

--- a/Sources/Plancrow/public/stylesheets/style.less
+++ b/Sources/Plancrow/public/stylesheets/style.less
@@ -110,3 +110,15 @@ body {
   }
 }
 
+/* select2 adjustment */
+.select2-choices {
+  border-radius: 4px;
+}
+.select2-dropdown-open .select2-choices {
+  border-radius: 4px 4px 0 0;
+  border-bottom: none;
+}
+.select2-drop-above .select2-choices {
+  border-radius: 0 0 4px 4px;
+  border-bottom: none;
+}
