--- a/Sources/Plancrow/views/layout.jade
+++ b/Sources/Plancrow/views/layout.jade
@@ -13,7 +13,9 @@ html
     script(type='text/javascript', src='/scripts/vendor/bootstrap/dist/js/bootstrap.min.js')
     script(type='text/javascript', src='/scripts/vendor/select2/select2.min.js')
     link(rel='stylesheet', href='/scripts/vendor/select2/select2.css')
-    link(rel='stylesheet', href='/scripts/vendor/select2-bootstrap-css/select2-bootstrap.css')
+
+    // this one is out-of-date, check in a couple of months — might be updated to the latest bootstrap
+    //link(rel='stylesheet', href='/scripts/vendor/select2-bootstrap-css/select2-bootstrap.css')
     link(rel='stylesheet', href='/scripts/vendor/font-awesome/css/font-awesome.min.css')
 
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
