Fixes #20 Page 12: Show task details as a popup, instead of toggle on/off

--- a/Sources/Plancrow/public/stylesheets/style.less
+++ b/Sources/Plancrow/public/stylesheets/style.less
@@ -98,13 +98,13 @@ body {
 
 /* task colors by status */
 .name{
-  &.N{
+  .N{
     color: black;
   }
-  &.A {
+  .A {
     color: green;
   }
-  &.C {
+  .C {
     color: gray;
     text-decoration: line-through;
   }
