--- a/Sources/Plancrow/public/stylesheets/style.less
+++ b/Sources/Plancrow/public/stylesheets/style.less
@@ -3,10 +3,6 @@ body {
   padding-bottom: 60px;
 }
 
-.draghover {
-  background: lightblue;
-}
-
   /* Custom container */
 .container {
   margin: 0 auto;
@@ -47,6 +43,15 @@ body {
   margin-top: 28px;
 }
 
+span.draghover {
+  //  background-color: #3a3c3c;
+  //  border-color: red;
+  //  border-color: #2e2f2f;
+  //  border: 3px solid blue;
+  border: 3px solid #ccc;
+  //  color: white;
+}
+
 .tree li.prj-node {
   margin: 0px 0;
   list-style-type: none;
@@ -84,9 +89,16 @@ body {
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
+  &.draghover {
+    border-color: green;
+    background: lightgreen;
+  }
+  .drag_grab {
+    color: grey;
+  }
 }
 
-/*Remove connectors before root*/
+  /*Remove connectors before root*/
 .tree > ul > li.prj-node::before, .tree > ul > li.prj-node::after {
   border: 0;
 }
@@ -96,9 +108,9 @@ body {
   height: 30px;
 }
 
-/* task colors by status */
-.name{
-  .N{
+  /* task colors by status */
+.name {
+  .N {
     color: black;
   }
   .A {
@@ -110,14 +122,16 @@ body {
   }
 }
 
-/* select2 adjustment */
+  /* select2 adjustment */
 .select2-choices {
   border-radius: 4px;
 }
+
 .select2-dropdown-open .select2-choices {
   border-radius: 4px 4px 0 0;
   border-bottom: none;
 }
+
 .select2-drop-above .select2-choices {
   border-radius: 0 0 4px 4px;
   border-bottom: none;
